--- a/workspace/ideaworkspace/NIO/pom.xml
+++ b/workspace/ideaworkspace/NIO/pom.xml
@@ -22,6 +22,13 @@
         <artifactId>poi-ooxml</artifactId>
         <version>3.17</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.8</version>
+        <scope>provided</scope>
+    </dependency>
 
 </dependencies>
 
