--- a/workspace/ideaworkspace/scfchapter01/service-hi/pom.xml
+++ b/workspace/ideaworkspace/scfchapter01/service-hi/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.forezp</groupId>
+        <artifactId>sc-f-chapter1</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.forezp</groupId>
     <artifactId>service-hi</artifactId>
@@ -20,10 +19,12 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
