--- a/workspace/ideaworkspace/firstMicroService/readExcel-replaceTxt-Impl/pom.xml
+++ b/workspace/ideaworkspace/firstMicroService/readExcel-replaceTxt-Impl/pom.xml
@@ -8,13 +8,31 @@
     <groupId>com.lwq</groupId>
     <artifactId>readExcel-replaceTxt-Impl</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <dependencies>
-       
         <!--集成接口-->
         <dependency>
             <groupId>com.lwq</groupId>
             <artifactId>readExcel-replaceTxt-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.2.1.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+            <version>2.2.0.RC2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.2.1.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
