--- a/workspace/ideaworkspace/ccbMicroService1910/pom.xml
+++ b/workspace/ideaworkspace/ccbMicroService1910/pom.xml
@@ -111,6 +111,8 @@
         <module>lwq-common</module>
         <module>lwq-API</module>
         <module>test-demo</module>
+        <module>system-service</module>
+        <module>ribbon-service</module>
     </modules>
 
 
