--- a/workspace/ideaworkspace/ccbMicroService1910/config/config-client/pom.xml
+++ b/workspace/ideaworkspace/ccbMicroService1910/config/config-client/pom.xml
@@ -10,5 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>client-config</artifactId>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
