--- a/workspace/ideaworkspace/ccbMicroService1910/config/config-client/src/main/resources/bootstrap.properties
+++ b/workspace/ideaworkspace/ccbMicroService1910/config/config-client/src/main/resources/bootstrap.properties
@@ -20,6 +20,6 @@ spring.cloud.config.uri= http://localhost:8888/
 
 
 #如果将config加入eureka注册中心,可使用如下配置
-#spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.enabled=true  //  是否从配置中心读取文件
 #spring.cloud.config.discovery.serviceId= config-server
 #eureka.client.serviceUrl.defaultZone=http://localhost:9000/eureka/
