--- a/workspace/ideaworkspace/ccbMicroService1910/service-system/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ccbMicroService1910/service-system/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+#applicaiton.properties 优先级比application.yml高  如都配置了port,只有properties文件中的生效
 server.port=1000
 spring.application.name= system-service
-eureka.client.service-url.defaultZone = http://localhost:9000/eureka/
+eureka.client.service-url.defaultZone= http://localhost:9000/eureka/
+
+#使用plus配置修改为
+#mybatis-plus.config-location= classpath:/mybatis/config/mybatis-config.yml
+mybatis-plus.mapper-locations= classpath*:mybatis/mapper/*.xml
+#配置SQL日志级别
+logging.level.com.sys.mapper.* = debug
+#配置数据源
+spring.datasource.url= jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+
