--- a/workspace/ideaworkspace/ccbMicroService1910/config/config-service/pom.xml
+++ b/workspace/ideaworkspace/ccbMicroService1910/config/config-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-config</artifactId>
+    <artifactId>config-service</artifactId>
 
     <dependencies>
 
