--- a/workspace/ideaworkspace/ccbMicroService1910/config/pom.xml
+++ b/workspace/ideaworkspace/ccbMicroService1910/config/pom.xml
@@ -64,5 +64,8 @@
             </plugin>
         </plugins>
     </build>
-
+    <modules>
+        <module>config-client</module>
+        <module>config-service</module>
+    </modules>
 </project>
