--- a/workspace/ideaworkspace/ccbMicroService1910/service-B/pom.xml
+++ b/workspace/ideaworkspace/ccbMicroService1910/service-B/pom.xml
@@ -9,20 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mybatis-plus-MBG</artifactId>
+    <artifactId>service-B</artifactId>
+    <modules>
+        <module>B-thief</module>
+    </modules>
     <dependencies>
-
-        <!--添加 代码生成器 依赖-->
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.29</version>
+            <groupId>com.lwq</groupId>
+            <artifactId>wayne-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
