--- a/workspace/ideaworkspace/mService/eureka/pom.xml
+++ b/workspace/ideaworkspace/mService/eureka/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lwq</groupId>
-    <artifactId>eureka-service</artifactId>
+    <artifactId>eureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eureka-service</name>
     <description>eureka-service for micproject</description>
