--- a/workspace/ideaworkspace/mService/service-freemarker/pom.xml
+++ b/workspace/ideaworkspace/mService/service-freemarker/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-system</artifactId>
+    <artifactId>service-freemarker</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.lwq</groupId>
