--- a/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
+++ b/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.password=root
 logging.level.com.lwq.hr.mapper.*=debug
 # mybatis-plus
 mybatis-plus.mapper-locations=classpath:/mapper/*.xml
+mybatis-plus.type-aliases-package= com.lwq.hr.entity
+
 # \u670D\u52A1\u4E2D\u5FC3\u6CE8\u518C
 server.port= 8081
 spring.application.name= hr
