--- a/workspace/webstormproject/vuehr/package.json
+++ b/workspace/webstormproject/vuehr/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
