--- a/workspace/ideaworkspace/mService/service-main/hrserve/pom.xml
+++ b/workspace/ideaworkspace/mService/service-main/hrserve/pom.xml
@@ -78,12 +78,18 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
-
+        <!--####################  缓存   ######################-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
 
     </dependencies>
-
-
 
 
     <build>
