--- a/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
+++ b/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
@@ -13,3 +13,11 @@ mybatis-plus.type-aliases-package= com.lwq.hr.entity
 server.port= 8081
 spring.application.name= hr
 # eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
+
+# redis
+spring.redis.host= localhost
+spring.redis.port= 6379
+spring.redis.password= 123
+spring.redis.database= 0
+
+spring.cache.cache-names= c1
