--- a/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
+++ b/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
@@ -1,3 +1,10 @@
+#######################################  \u5FAE\u670D\u52A1  #######################################################
+# \u670D\u52A1\u4E2D\u5FC3\u6CE8\u518C
+server.port= 8081
+spring.application.name= hr
+# eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
+
+#######################################  \u6301\u4E45\u5C42  #######################################################
 # \u6570\u636E\u6E90
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/vhr?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
@@ -8,16 +15,11 @@ logging.level.com.lwq.hr.mapper.*=debug
 # mybatis-plus
 mybatis-plus.mapper-locations=classpath:/mapper/*.xml
 mybatis-plus.type-aliases-package= com.lwq.hr.entity
-
-# \u670D\u52A1\u4E2D\u5FC3\u6CE8\u518C
-server.port= 8081
-spring.application.name= hr
-# eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
-
 # redis
 spring.redis.host= localhost
 spring.redis.port= 6379
 spring.redis.password= 123
 spring.redis.database= 0
-
+# springCache \u7F13\u5B58\u914D\u7F6E
 spring.cache.cache-names= c1
+
