--- a/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
+++ b/workspace/ideaworkspace/mService/service-main/hrserve/src/main/resources/application-dev.properties
@@ -21,9 +21,10 @@ spring.redis.port= 6379
 spring.redis.password= 123
 spring.redis.database= 0
 # springCache \u7F13\u5B58\u914D\u7F6E
-spring.cache.cache-names= c1
+spring.cache.cache-names= c1,diff
 ######################################  \u6587\u4EF6\u4E0A\u4F20  #######################################################
 wayne.uploadPath = d:/upload/
+wayne.goodPath = D:\\workSpaceXD\\MyTarget\\goods.xlsx
 #\u5355\u4E2A\u6570\u636E\u7684\u5927\u5C0F
 spring.servlet.multipart.max-file-size = 100MB
 #\u603B\u6570\u636E\u7684\u5927\u5C0F
