--- a/workspace/ideaworkspace/mService/zuul/src/main/resources/application.yml
+++ b/workspace/ideaworkspace/mService/zuul/src/main/resources/application.yml
@@ -16,3 +16,7 @@ zuul:
     api-feign:
       path: /api-feign/**
       serviceId: service-feign
+
+    api-vhr:
+      path: /api-vhr/**
+      serviceId: hr
