--- a/workspace/ideaworkspace/ksmserver/commons/pom.xml
+++ b/workspace/ideaworkspace/ksmserver/commons/pom.xml
@@ -2,14 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>ksmserver</artifactId>
-        <groupId>org.wayne</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.wayne</groupId>
     <artifactId>commons</artifactId>
-
-
+    <version>1.0-SNAPSHOT</version>
+<!--commons 包不要有父类 否则又要依赖父类才能打包-->
+<!--commons 只能是maven工程 springboot项目打包完成的jar包不能被依赖-->
 </project>
