--- a/workspace/ideaworkspace/ksmserver/ks-server/consumer/pom.xml
+++ b/workspace/ideaworkspace/ksmserver/ks-server/consumer/pom.xml
@@ -17,6 +17,40 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
+        <!-- 熔断(服务降级/容错) 请求缓存 请求合并 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+        <!--简化RestTemplate 继承特性 搭配Hystrix的服务降级-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!--替代netflix-hystrix 熔断/重试!/限流! -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+            <version>1.2.0</version>
+            <exclusions>
+                <!--使用时 每一个都要配置 测试时exclude掉-->
+<!--                <exclusion>-->
+<!--                    <groupId>io.github.resilience4j</groupId>-->
+<!--                    <artifactId>resilience4j-circuitbreaker</artifactId>-->
+<!--                </exclusion>-->
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-ratelimiter</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-bulkhead</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-timelimiter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
