--- a/workspace/ideaworkspace/ksmserver/ks-server/consumer/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/ks-server/consumer/src/main/resources/application.properties
@@ -1,4 +1,33 @@
 server.port=2223
 spring.application.name=consumer
-
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
+# 整个包的feign都以debug日志级别输出,可以配置到单个类
+logging.level.org.wayne.consumer.openfeign=debug
+# 开启请求的数据压缩
+feign.compression.request.enabled=true
+# 开启响应的数据压缩
+feign.compression.response.enabled=true
+# 数据压缩类型
+feign.compression.request.mime-types=text/html;application/json
+# 压缩的数据下限, 2048表示当要传输的数据大于2048时才会进行数据压缩
+feign.compression.request.min-request-size=2048
+# 开启feign服务降级
+feign.hystrix.enabled=true
+######## resilience4j ###########
+# 优先级 越小越高
+resilience4j.retry.retry-aspect-order= 399
+# 策略 自定义名称retryA
+# 重试次数 重试等待时间 抛出的异常
+resilience4j.retry.backends.retryA.max-retry-attempts=5
+resilience4j.retry.backends.retryA.wait-duration=500
+resilience4j.retry.backends.retryA.retry-exceptions=java.lang.RuntimeException
+# 间隔乘数(错开网络波动,每次请求间隔的时间倍数,第一次1.1s第二次1.21s)(网络波动:网络问题可能每隔x秒回出现网络无法访问,)
+resilience4j.retry.backends.retryA.exponential-backoff-multiplier=1.1
+#
+# 断路器 circuitbreaker
+# 自定义策略名称 cbA
+resilience4j.circuitbreaker.instances.cbA.ring-buffer-size-in-closed-state=5
+resilience4j.circuitbreaker.instances.cbA.ring-buffer-size-in-half-open-state=3
+resilience4j.circuitbreaker.instances.cbA.wait-duration-in-open-state=5000
+resilience4j.circuitbreaker.instances.cbA.record-exceptions=org.springframework.web.client.HttpServerErrorException
+resilience4j.circuitbreaker.circuit-breaker-aspect-order=398
