--- a/workspace/ideaworkspace/ksmserver/ks-server/provide/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/ks-server/provide/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=2222
 spring.application.name=provide
 
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
+######## 限流 ############
+# 1秒钟处理1个请求
+resilience4j.ratelimiter.limiters.rA.limit-for-period=1
+# 刷新周期
+resilience4j.ratelimiter.limiters.rA.limit-refresh-period=1s
+# 冷却周期
+resilience4j.ratelimiter.limiters.rA.timeout-duration=1s
