--- a/workspace/ideaworkspace/ksmserver/ks-server/provide/pom.xml
+++ b/workspace/ideaworkspace/ksmserver/ks-server/provide/pom.xml
@@ -18,6 +18,30 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
+        <!--替代netflix-hystrix 熔断/重试!/限流! -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+            <version>1.2.0</version>
+            <exclusions>
+                <!--使用时 每一个都要配置 测试时exclude掉-->
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-circuitbreaker</artifactId>
+                </exclusion>
+                <!--                <exclusion>-->
+                <!--                    <groupId>io.github.resilience4j</groupId>-->
+                <!--                    <artifactId>resilience4j-ratelimiter</artifactId>-->
+                <!--                </exclusion>-->
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-bulkhead</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.github.resilience4j</groupId>
+                    <artifactId>resilience4j-timelimiter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
