--- a/workspace/ideaworkspace/ksmserver/ks-server/micrometer/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/ks-server/micrometer/src/main/resources/application.properties
@@ -9,5 +9,6 @@ info.app.encoding = @project.build.sourceEncoding@
 info.app.java.source = @java.version@
 info.app.java.target = @java.version@
 
-# 添加git插件后配置生成git信息
+# 添加git插件后 maven插件中生成 git-commit-id配置生成git信息
+# 将信息显示在info中
 management.info.git.mode=full
