--- a/workspace/ideaworkspace/ksmserver/ks-server/pom.xml
+++ b/workspace/ideaworkspace/ksmserver/ks-server/pom.xml
@@ -4,9 +4,10 @@
     <modelVersion>4.0.0</modelVersion><!--pom的模型规范版本-->
     <packaging>pom</packaging><!--父模块打包类型必须为pom-->
 
-    <modules>
+    <modules><!--编译parent时,modules中的也会编译-->
         <module>consumer</module>
         <module>provide</module>
+        <module>micrometer</module>
     </modules>
 
     <parent>
