--- a/workspace/ideaworkspace/ksmserver/remote-config-server/spring-cloud-config/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/remote-config-server/spring-cloud-config/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 server.port=8088
 spring.application.name= config-server
 # 配置文件仓库地址
-#spring.cloud.config.server.git.uri=https://github.com/weiqilin66/workSpaceXD.git
-spring.cloud.config.server.git.uri=https://github.com/wongsung/configRepo.git
-# 仓库中,配置文件的目录
-#spring.cloud.config.server.git.search-paths=cloud-config
-spring.cloud.config.server.git.search-paths=client1
+spring.cloud.config.server.git.uri=https://github.com/weiqilin66/remote-config.git
+# 仓库中,配置文件的目录 只查找该级目录不会往下 例如client1下还有个文件夹client2,下面的配置文件检索不到
+spring.cloud.config.server.git.search-paths=cloudConfig/client1
 # ...配置文件加密...
-spring.cloud.config.server.git.username=weiqilin66@gmail.com
+spring.cloud.config.server.git.username=weiqilin66
 spring.cloud.config.server.git.password=linweiqi45vip
 
 # 访问路径规则
