--- a/workspace/ideaworkspace/ksmserver/ks-server/consumer/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/ks-server/consumer/src/main/resources/application.properties
@@ -16,7 +16,8 @@ feign.hystrix.enabled=true
 ######## resilience4j ###########
 # 优先级 越小越高
 resilience4j.retry.retry-aspect-order= 399
-# 策略 自定义名称retryA
+# 重试 Retry
+# 自定义策略名称retryA
 # 重试次数 重试等待时间 抛出的异常
 resilience4j.retry.backends.retryA.max-retry-attempts=5
 resilience4j.retry.backends.retryA.wait-duration=500
