--- a/workspace/ideaworkspace/ksmserver/ks-server/micrometer/pom.xml
+++ b/workspace/ideaworkspace/ksmserver/ks-server/micrometer/pom.xml
@@ -13,9 +13,15 @@
 
 
     <dependencies>
+        <!--Actuator:健康检查、审计、统计和监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--prometheus可视化监控-->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
     </dependencies>
 
