--- a/workspace/ideaworkspace/ksmserver/ks-server/micrometer/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/ks-server/micrometer/src/main/resources/application.properties
@@ -12,3 +12,11 @@ info.app.java.target = @java.version@
 # 添加git插件后 maven插件中生成 git-commit-id配置生成git信息
 # 将信息显示在info中
 management.info.git.mode=full
+
+############ prometheus可视化actuator ############
+# 开启prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
+# 1启动项目 2虚拟机中开启Prometheus 3访问http://192.168.43.170:9090/
+# 默认启动在9090端口
