--- a/workspace/ideaworkspace/ksmserver/router-server/zuul/src/main/resources/application.properties
+++ b/workspace/ideaworkspace/ksmserver/router-server/zuul/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 # 服务网关
 # 权限问题统一处理,数据剪切和聚合
-
 server.port=9001
 spring.application.name=zuul
-
 eureka.client.service-url.defaultZone =http://localhost:1111/eureka
 # 请求转发 所有符合规则的路径的发送到provide服务上
-# :9001/wayne/** == :/9001/provide/**
 zuul.routes.wayne-a.path=/wayne/**
 zuul.routes.wayne-a.service-id=provide
+# 如上配置 使用http://...路由地址端口/服务名/接口 也可以访问到 gateway中服务名必须大写
 # 直接指定匹配的url,则无法在通过 :9001/provide/**访问provide服务
 #zuul.routes.wayne-a.url= localhost:2222
-#
 # 可配置多个路径匹配一个服务id
+#
 # 简写
 zuul.routes.provide = /wayne2/**
 #
